--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,15 @@
 </head>
 <body>
     <header>
-        
+        <nav class="navbar seperate center-text">
+            <div class="elements-prod-3">
+                <a class="heading-1">Tech Blog</a>
+                <a class="title-3">Dashboard</a>
+            </div>
+            <div class="elements-prod-3">
+                <a class="title-3">Logout</a>
+            </div>
+        </nav>
     </header>
 </body>
 </html>
