--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,17 +10,20 @@
     <link rel="stylesheet" href="https://kwlucas.github.io/Slate/css/core.css" />
     <link rel="stylesheet" type="text/css" href="./styles/style.css" />
 </head>
+
 <body>
-    <header>
-        <nav class="navbar seperate center-text">
+    <header class="prod-2">
+        <div class="container seperate elements-prod-1">
+            <div class="heading-1">The Tech Blog</div>
+            <a class="title-3 log-btn">Logout</a>
+        </div>
+        <nav class="navbar center-text title-3">
             <div class="elements-prod-3">
-                <a class="heading-1">Tech Blog</a>
-                <a class="title-3">Dashboard</a>
-            </div>
-            <div class="elements-prod-3">
-                <a class="title-3">Logout</a>
+                <a>Home</a>
+                <a>Dashboard</a>
             </div>
         </nav>
     </header>
 </body>
+
 </html>
