--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,11 +1,10 @@
 <main>
-    <div>
-        <form>
-            <label for="username-input">Username</label>
-            <input type="text" id="username-input" placeholder="Username" required />
-            <label for="password-input">Password</label>
-            <input type="password" id='password-input' placeholder="Password" required />
-            <button type="submit">Login</button>
-        </form>
-    </div>
+    <form class="nudge-3">
+        <div class="slate-section format-all-elements set-per-row-1 stack">
+            <input type="text" id="username-input" class="title-4" placeholder="Username" aria-label="Input username" required />
+            <input type="password" id="password-input" class="title-4" placeholder="Password" aria-label="Input password" required />
+            <button type="submit" class="info title-4">Login</button>
+            <p class="italics center-text">Don't have an account? <a>Signup</a></p>
+        </div>
+    </form>
 </main>
