Added login-form identifier

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,5 @@
 <main>
-    <form class="nudge-3">
+    <form id="login-form" class="nudge-3">
         <div class="slate-section format-all-elements set-per-row-1 stack">
             <input type="text" id="username-input" class="title-4" placeholder="Username" aria-label="Input username" required />
             <input type="password" id="password-input" class="title-4" placeholder="Password" aria-label="Input password" required />
