--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -2,7 +2,7 @@
     <form id="signup-form" class="nudge-3">
         <div class="slate-section format-all-elements set-per-row-1 stack">
             <input type="text" id="username-input" class="title-4" placeholder="Username" aria-label="Input username" required />
-            <input type="password" id="password-input" class="title-4" placeholder="Password" aria-label="Input password" required />
+            <input type="password" id="password-input" class="title-4" placeholder="Password" aria-label="Input password" title="Must meet password criteria!" pattern="^(?=.*\d)(?=.*[A-Z])(?=.*[a-z])(?=.*[!@#$%^&*_])[\w!@#$%^&*]{8,16}$" required />
             <button type="submit" class="info title-4">Login</button>
             <p class="italics center-text">Have an account? <a>Login</a></p>
         </div>
