Changed submit button color

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -3,7 +3,7 @@
         <div class="slate-section format-all-elements set-per-row-1 stack">
             <input type="text" id="username-input" class="title-4" placeholder="Username" aria-label="Input username" required />
             <input type="password" id="password-input" class="title-4" placeholder="Password" aria-label="Input password" title="Must meet password criteria!" pattern="^(?=.*\d)(?=.*[A-Z])(?=.*[a-z])(?=.*[!@#$%^&*_])[\w!@#$%^&*]{8,16}$" required />
-            <button type="submit" class="info title-4">Login</button>
+            <button type="submit" class="success title-4">Signup</button>
             <p class="italics center-text">Have an account? <a>Login</a></p>
         </div>
     </form>
