--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -4,7 +4,7 @@
             <input type="text" id="username-input" class="title-4" placeholder="Username" aria-label="Input username" required />
             <input type="password" id="password-input" class="title-4" placeholder="Password" aria-label="Input password" title="Must meet password criteria!" pattern="^(?=.*\d)(?=.*[A-Z])(?=.*[a-z])(?=.*[!@#$%^&*_])[\w!@#$%^&*]{8,16}$" required />
             <button type="submit" class="success title-4">Signup</button>
-            <ul id="criteria-list" class="bullet-point slate-section format-all-elements set-per-row-2">
+            <ul id="criteria-list" class="bullet-point crossmark inside inline-list">
             </ul>
             <p class="italics center-text">Have an account? <a>Login</a></p>
         </div>
