Added stylized page to handlebars

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,9 +1,12 @@
 <main>
-    <div class="card">
-        <div class="header">
-            <h2>Title</h2>
+    <div class="card clickable hover-raise">
+        <div class="header inline seperate shaded elements-prod-horizontal-2">
+            <div class="inline">
+                <h2>Title</h2>
+                <div class="italics prod-right-2">by USER</div>
+            </div>
             <div>
-                Posted by USER on DATE
+                Posted DATE
             </div>
         </div>
         <div class="body">
