Formatted homepage for handlebars templating

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,16 +1,18 @@
 <main>
-    <div class="card clickable hover-raise">
+    {{#each posts}}
+    <div class="card clickable hover-raise" post_id="{{this.id}}">
         <div class="header inline seperate shaded elements-prod-horizontal-2">
             <div class="inline">
-                <h2>Title</h2>
-                <div class="italics prod-right-2">by USER</div>
+                <h2>{{this.title}}</h2>
+                <div class="italics prod-right-2">by {{this.user.username}}</div>
             </div>
             <div>
-                Posted DATE
+                Posted {{format_date this.createdAt}}
             </div>
         </div>
         <div class="body">
-            Card content goes here.
+            {{this.content}}
         </div>
     </div>
+    {{/each}}
 </main>
