Added display if there are no comments on a post

--- a/views/viewpost.handlebars
+++ b/views/viewpost.handlebars
@@ -29,6 +29,10 @@
                 </div>
             </div>
             {{/each}}
+            {{else}}
+            <div class="container fill center">
+                <h3>There are no comments on this post yet.</h3>
+            </div>
             {{/if}}
         </div>
     </section>
