Created delete button on a user's own comment

--- a/views/viewpost.handlebars
+++ b/views/viewpost.handlebars
@@ -43,6 +43,11 @@
                 <div class="body">
                     {{this.content}}
                 </div>
+                {{#ifComparison "===" this.user.id signedInUser.id}}
+                <div class="footer">
+                    <button class="danger float-right" comment_id="{{this.id}}">Delete</button>
+                </div>
+                {{/ifComparison}}
             </div>
             {{/each}}
             {{else}}
