Chenged author to user

--- a/views/viewpost.handlebars
+++ b/views/viewpost.handlebars
@@ -3,7 +3,7 @@
         <div class="header inline seperate shaded elements-prod-horizontal-2">
             <div class="inline">
                 <h2>{{post.title}}</h2>
-                <div class="italics prod-right-2">by {{post.author.username}}</div>
+                <div class="italics prod-right-2">by {{post.User.username}}</div>
             </div>
             <div>
                 Posted {{format_date post.createdAt}}
