Added links to main page

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,12 +15,12 @@
     <header class="prod-2">
         <div class="container seperate elements-prod-1">
             <div class="heading-1">The Tech Blog</div>
-            <a class="title-3 log-btn">Logout</a>
+            <a class="title-3 log-btn" href="/logout">Logout</a>
         </div>
         <nav class="navbar center-text title-3">
             <div class="elements-prod-3">
-                <a>Home</a>
-                <a>Dashboard</a>
+                <a href="/">Home</a>
+                <a href="/dashboard">Dashboard</a>
             </div>
         </nav>
     </header>
