Added links to login page

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -6,7 +6,7 @@
             <button type="submit" class="success title-4">Signup</button>
             <ul id="criteria-list" class="bullet-point crossmark inside inline-list">
             </ul>
-            <p class="italics center-text">Have an account? <a>Login</a></p>
+            <p class="italics center-text">Have an account? <a href="/login">Login</a></p>
         </div>
     </form>
 </main>
