--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -16,6 +16,13 @@
         <div class="body">
             {{this.content}}
         </div>
+        {{#ifComparison "===" this.user.id signedInUser.id}}
+        <div class="footer">
+            <button class="danger float-right" comment_id="{{this.id}}">Delete</button>
+        </div>
+        {{else}}
+        <div class="footer">Test</div>
+        {{/ifComparison}}
     </div>
     {{/each}}
 </main>
