Adjusted new post link

--- a/views/layouts/dashboard.handlebars
+++ b/views/layouts/dashboard.handlebars
@@ -27,7 +27,7 @@
     {{{body}}}
     <footer>
         <div class="container center">
-            <a class="heading-3" href="/dashboard/new">Create New Post</a>
+            <a class="heading-3" href="/dashboard/newpost">Create New Post</a>
         </div>
     </footer>
 </body>
