--- a/views/layouts/dashboard.handlebars
+++ b/views/layouts/dashboard.handlebars
@@ -8,7 +8,7 @@
     <title>Your Dashboard | Tech Blog</title>
     <!-- Slate is my WIP CSS "framework" -->
     <link rel="stylesheet" href="https://kwlucas.github.io/Slate/css/core.css" />
-    <link rel="stylesheet" type="text/css" href="./styles/style.css" />
+    <link rel="stylesheet" type="text/css" href="../styles/style.css" />
 </head>
 
 <body>
@@ -31,5 +31,5 @@
         </div>
     </footer>
 </body>
-<script src="./scripts/index.js"></script>
+<script src="../scripts/index.js"></script>
 </html>
