--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,7 +8,7 @@
     <title>Tech Blog</title>
     <!-- Slate is my WIP CSS "framework" -->
     <link rel="stylesheet" href="https://kwlucas.github.io/Slate/css/core.css" />
-    <link rel="stylesheet" type="text/css" href="./styles/style.css" />
+    <link rel="stylesheet" type="text/css" href="../styles/style.css" />
 </head>
 
 <body>
@@ -26,5 +26,5 @@
     </header>
     {{{body}}}
 </body>
-<script src="./scripts/index.js"></script>
+<script src="../scripts/index.js"></script>
 </html>
