--- a/views/viewpost.handlebars
+++ b/views/viewpost.handlebars
@@ -27,8 +27,7 @@
                         <h3>Make a comment on this post!</h3>
                     </div>
                     <div class="body">
-                        <textarea id="comment-entry fill" placeholder="What do you want to say?" required>
-                        </textarea>
+                        <textarea id="comment-entry" class="fill" placeholder="What do you want to say?" required></textarea>
                     </div>
                     <div class="footer">
                         <button class="success" type="submit">Post</button>
