--- a/views/viewpost.handlebars
+++ b/views/viewpost.handlebars
@@ -27,10 +27,10 @@
                         <h3>Make a comment on this post!</h3>
                     </div>
                     <div class="body">
-                        <textarea id="comment-entry" class="fill" placeholder="What do you want to say?" required></textarea>
+                        <textarea id="comment-entry" class="fill allow-resize-vertical prod-1" placeholder="What do you want to say?" rows="3" required></textarea>
                     </div>
-                    <div class="footer">
-                        <button class="success" type="submit">Post</button>
+                    <div class="footer align-text-end">
+                        <button class="success bold prod-horizontal-3" type="submit">Post</button>
                     </div>
                 </div>
             </form>
