Adjusted sizing and padding on textarea

--- a/views/newpost.handlebars
+++ b/views/newpost.handlebars
@@ -6,7 +6,7 @@
                 placeholder="Enter Post Title"></input>
         </div>
         <div class="body">
-            <textarea id="content-input" class="fill allow-resize-vertical" rows="5" required
+            <textarea id="content-input" class="fill allow-resize-vertical prod-1" rows="5" required
                 placeholder="Enter your post content here."></textarea>
         </div>
         <div class="footer button-group">
