--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -12,5 +12,17 @@ header a {
 }
 
 .card[post_id]:hover {
-    max-height: 6.5em;
+    max-height: 8.2em;
+}
+
+.card[post_id]>.body {
+    transition: max-height ease 0.5s;
+    max-height: 2.5em;
+    overflow: hidden;
+}
+
+.card[post_id]:hover>.body {
+    transition: max-height ease 0.5s;
+    max-height: 3.2em;
+    overflow: hidden;
 }
