Removed dash classes after style re-work

--- a/views/postmanager.handlebars
+++ b/views/postmanager.handlebars
@@ -1,7 +1,7 @@
 <main>
     <div id="user-signed-in" class="hidden">{{signedInUser.id}}</div>
     {{#each posts}}
-    <div class="card clickable hover-raise dash" post_id="{{this.id}}">
+    <div class="card clickable hover-raise" post_id="{{this.id}}">
         <div class="header inline seperate shaded elements-prod-horizontal-2">
             <div class="inline">
                 <h2>{{this.title}}</h2>
