Added footer text on a user's own post

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -18,7 +18,7 @@
         </div>
         {{#ifComparison "===" this.User.id ../signedInUser.id}}
         <div class="footer">
-            <button class="danger" comment_id="{{this.id}}">Delete</button>
+            <p class="italics">Look its your post!</p>
         </div>
         {{/ifComparison}}
     </div>
