--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -5,23 +5,23 @@ header a {
     text-decoration: none;
 }
 
-.card[post_id] {
+.preview.card[post_id] {
     transition: max-height ease 0.5s;
     max-height: 5.8em;
     overflow: hidden;
 }
 
-.card[post_id]:hover {
+.preview.card[post_id]:hover {
     max-height: 8.2em;
 }
 
-.card[post_id]>.body {
+.preview.card[post_id]>.body {
     transition: max-height ease 0.5s;
     max-height: 2.5em;
     overflow: hidden;
 }
 
-.card[post_id]:hover>.body {
+.preview.card[post_id]:hover>.body {
     transition: max-height ease 0.5s;
     max-height: 3.2em;
     overflow: hidden;
