--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -3,7 +3,7 @@
     <div id="user-signed-in" class="hidden">{{signedInUser.id}}</div>
     {{/if}}
     {{#each posts}}
-    <div class="card clickable hover-raise" post_id="{{this.id}}">
+    <div class="card preview clickable hover-raise" post_id="{{this.id}}">
         <div class="header inline seperate shaded elements-prod-horizontal-2">
             <div class="inline">
                 <h2>{{this.title}}</h2>
