Moved the delete button on comments

--- a/views/viewpost.handlebars
+++ b/views/viewpost.handlebars
@@ -46,7 +46,7 @@
                     {{this.content}}
                 </div>
                 {{#ifComparison "===" this.User.id ../signedInUser.id}}
-                <div class="footer">
+                <div class="footer align-text-end">
                     <button class="danger" id="delete-btn-{{this.id}}">Delete</button>
                 </div>
                 {{/ifComparison}}
